--- a/index.html
+++ b/index.html
@@ -34,15 +34,14 @@
     </section> 
     <section class="hero">
         <div class="container">
-         <h2 class="element-invisible">спрячем потом</h2>
-     <ul class="hero-list">  
-        <li> <h3 class= "title-hero" >Внимание к деталям</h3>  
+             <ul class="hero-list">  
+        <li class="hero-cont"> <h3 class= "title-hero" >Внимание к деталям</h3>  
       <p  class="text-hero">Идейные соображения, а также  начало повседневной работы по  формированию позиции. </p></li>
-      <li><h3 class = "title-hero"> Пунктуальность</h3>
+      <li class="hero-cont"><h3 class = "title-hero"> Пунктуальность</h3>
       <p class="text-hero">Задача организации, в особенности  же рамки и место обучения кадров влечет за собой.</p></li>
-      <li><h3 class= "title-hero">Планирование</h3> 
+      <li class="hero-cont"><h3 class= "title-hero">Планирование</h3> 
       <p class="text-hero">Равным образом консультация с  широким активом в значительной степени обуславливает.</p> </li>   
-      <li><h3 class= "title-hero">Современные технологии</h3>    
+      <li class="hero-cont"><h3 class= "title-hero">Современные технологии</h3>    
       <p class="text-hero">Значимость этих проблем настолько  очевидна, что реализация плановых заданий.</p></li>
     </ul> </div>
     </section>
@@ -118,13 +117,13 @@
     <a class="logo-footer" href="index.html"> <span class="logo-name">Web</span>Studio </a> 
         <address>        
         <ul class="footer-info">
-            <li>
+            <li class="footer-adress">
              <a class="adress" href="">г. Киев, пр-т Леси Украинки, 26</a>              
             </li>
-            <li>
+            <li class="footer-adress">
                 <a class="footer-link" href="mailto:info@example.com">info@example.com</a>
             </li>
-            <li>
+            <li class="footer-adress">
                 <a class="footer-link" href="tel:+380991111111">+38 099 111 11 11</a>
             </li>
         </ul>
