--- a/portfolio.html
+++ b/portfolio.html
@@ -30,46 +30,46 @@
 <main>
     <!--Портфолио-->
     <section class="portfolio">
-      <div class="container"><h1 class="element-invisible">Портфолио</h1>
+      <div class="container">
               <ul class="portolio-list">
-            <li class="portfolio-btn"> <button  class="portfolio-btn">Все</button></li>
-            <li class="portfolio-btn"><button class="portfolio-btn">Веб-сайты</button></li>
-            <li class="portfolio-btn"><button class="portfolio-btn">Приложения</button> </li>
-            <li class="portfolio-btn"><button class="portfolio-btn">Дизайн</button></li>
-            <li class="portfolio-btn"><button class="portfolio-btn">Маркетинг</button></li>
+            <li class="portfolio-link"> <button  class="portfolio-btn">Все</button></li>
+            <li class="portfolio-link"><button class="portfolio-btn">Веб-сайты</button></li>
+            <li class="portfolio-link"><button class="portfolio-btn">Приложения</button> </li>
+            <li class="portfolio-link"><button class="portfolio-btn">Дизайн</button></li>
+            <li class="portfolio-link"><button class="portfolio-btn">Маркетинг</button></li>
         </ul>
         <ul class="portfolio-item">
-            <li class="portf-name"> <img src="./images/portfolio1.jpg" 
+            <li class="portf-name"> <a href="portf-item"> <img src="./images/portfolio1.jpg" 
                  alt="технокряк"
                  width="370"
                  height="294"/>
                  <div class="portf-paragraph">
                <h2  class="portf-title" >Технокряк</h2>  
-               <p class="portf-text" >Веб-сайт</p> </div>     
+               <p class="portf-text" >Веб-сайт</p> </div></a>
             </li>
-            <li class="portf-name"> <img src="./images/portfolio2.jpg" 
+            <li class="portf-name"> <a href="portf-item"><img src="./images/portfolio2.jpg" 
                 alt="постер"
                 width="370"
                 height="294"/>
                 <div class="portf-paragraph">
               <h2 class="portf-title">Постер New Orlean vs Golden Star</h2>  
-              <p class="portf-text" >Дизайн</p></div>
+              <p class="portf-text" >Дизайн</p></div></a>
             </li>
-            <li class="portf-name"> <img src="./images/portfolio3.jpg" 
+            <li class="portf-name"> <a href="portf-item"> <img src="./images/portfolio3.jpg" 
                 alt="ресторан"
                 width="370"
                 height="294"/>
                 <div class="portf-paragraph">
               <h2 class="portf-title">Ресторан Seafood</h2>  
-              <p class="portf-text" >Приложение</p></div>
+              <p class="portf-text" >Приложение</p></div> </a>
             </li>
-            <li class="portf-name"> <img src="./images/portfolio4.jpg" 
+            <li class="portf-name"> <a href="portf-item"> <img src="./images/portfolio4.jpg" 
                 alt="проект прайм"
                 width="370"
                 height="294"/>
                 <div class="portf-paragraph">
               <h2 class="portf-title">Проект Prime</h2>  
-              <p class="portf-text" >Маркетинг</p></div>
+              <p class="portf-text" >Маркетинг</p></div> </a>
             </li>
             <li class="portf-name">
                 <img src="./images/portfolio5.jpg" 
@@ -78,39 +78,39 @@
                 height="294"/>
                 <div class="portf-paragraph">
               <h2 class="portf-title">Проект Boxes</h2>  
-              <p class="portf-text" >Приложение</p></div>
+              <p class="portf-text" >Приложение</p></div> </a>
             </li>
-            <li class="portf-name"><img src="./images/portfolio6.jpg" 
+            <li class="portf-name"> <a href="portf-item"> <img src="./images/portfolio6.jpg" 
                 alt="вдохновение не имеет границ"
                 width="370"
                 height="294"/>
                 <div class="portf-paragraph">
               <h2 class="portf-title">Inspiration has no Borders</h2>  
-              <p class="portf-text" >Веб-сайт</p></div>
+              <p class="portf-text" >Веб-сайт</p></div> </a>
             </li>
-            <li class="portf-name"><img src="./images/portfolio7.jpg" 
+            <li class="portf-name"> <a href="portf-item"> <img src="./images/portfolio7.jpg" 
                 alt="ограниченные издания"
                 width="370"
                 height="294"/>
                 <div class="portf-paragraph">
               <h2 class="portf-title">Издание Limited Edition</h2>  
-              <p class="portf-text" >Дизайн</p></div>
+              <p class="portf-text" >Дизайн</p></div> </a>
             </li>
-            <li class="portf-name"><img src="./images/portfolio8.jpg" 
+            <li class="portf-name"> <a href="portf-item"><img src="./images/portfolio8.jpg" 
                 alt="проект лаб"
                 width="370"
                 height="294"/>
                 <div class="portf-paragraph">
               <h2 class="portf-title">Проект LAB</h2>  
-              <p class="portf-text" >Маркетинг</p></div>
+              <p class="portf-text" >Маркетинг</p></div> </a>
             </li>
-            <li class="portf-name"> <img src="./images/portfolio9.jpg" 
+            <li class="portf-name"> <a href="portf-item"> <img src="./images/portfolio9.jpg" 
                 alt="бизнес"
                 width="370"
                 height="294"/>
                 <div class="portf-paragraph">
               <h2 class="portf-title">Growing Business</h2>  
-              <p class="portf-text" >Приложение</p></div>
+              <p class="portf-text" >Приложение</p></div> </a>
             </li>        
         </ul></div>
     </section>
