--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
  <header class="header-nav">
      <div class="container-header header-cont">
-<nav>
+<nav class="navigation">
     <a class="logo-nav" href ="index.html">  <span class="logo-name">Web</span> Studio </a> 
     <ul class="header-list">
         <li class="header-item"> <a class="logo-link" href="index.html"> Студия </a>  </li>
@@ -114,7 +114,8 @@
 </main>
 <footer class="footer">
     <div class="container-footer">
-    <a class="logo-footer" href="index.html"> <span class="logo-name">Web</span>Studio </a> 
+        <div class="footer-logo">    
+    <a class="logo-footer" href="index.html"> <span class="logo-name">Web</span>Studio </a> </div>
         <address>        
         <ul class="footer-info">
             <li class="footer-adress">
