--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body>
  <header class="header-nav">
   <div class="container-header header-cont">  
-<nav>
+<nav class="navigation">
     <a class="logo-nav" href ="index.html">  <span class="logo-name">Web</span> Studio </a> 
     <ul class="header-list">
         <li  class="header-item"> <a class="logo-link" href="index.html"> Студия </a>  </li>
@@ -39,7 +39,7 @@
             <li class="portfolio-link"><button class="portfolio-btn">Маркетинг</button></li>
         </ul>
         <ul class="portfolio-item">
-            <li class="portf-name"> <a href="portf-item"> <img src="./images/portfolio1.jpg" 
+            <li class="portf-name"> <a class="portf-item"  href=""> <img src="./images/portfolio1.jpg" 
                  alt="технокряк"
                  width="370"
                  height="294"/>
@@ -47,7 +47,7 @@
                <h2  class="portf-title" >Технокряк</h2>  
                <p class="portf-text" >Веб-сайт</p> </div></a>
             </li>
-            <li class="portf-name"> <a href="portf-item"><img src="./images/portfolio2.jpg" 
+            <li class="portf-name"> <a class="portf-item" href=""><img src="./images/portfolio2.jpg" 
                 alt="постер"
                 width="370"
                 height="294"/>
@@ -55,7 +55,7 @@
               <h2 class="portf-title">Постер New Orlean vs Golden Star</h2>  
               <p class="portf-text" >Дизайн</p></div></a>
             </li>
-            <li class="portf-name"> <a href="portf-item"> <img src="./images/portfolio3.jpg" 
+            <li class="portf-name"> <a class="portf-item" href=""> <img src="./images/portfolio3.jpg" 
                 alt="ресторан"
                 width="370"
                 height="294"/>
@@ -63,7 +63,7 @@
               <h2 class="portf-title">Ресторан Seafood</h2>  
               <p class="portf-text" >Приложение</p></div> </a>
             </li>
-            <li class="portf-name"> <a href="portf-item"> <img src="./images/portfolio4.jpg" 
+            <li class="portf-name"> <a class="portf-item"  href=""> <img src="./images/portfolio4.jpg" 
                 alt="проект прайм"
                 width="370"
                 height="294"/>
@@ -71,7 +71,7 @@
               <h2 class="portf-title">Проект Prime</h2>  
               <p class="portf-text" >Маркетинг</p></div> </a>
             </li>
-            <li class="portf-name">
+            <li class="portf-name"> <a class="portf-item" href="">
                 <img src="./images/portfolio5.jpg" 
                 alt="проект боксис"
                 width="370"
@@ -80,7 +80,7 @@
               <h2 class="portf-title">Проект Boxes</h2>  
               <p class="portf-text" >Приложение</p></div> </a>
             </li>
-            <li class="portf-name"> <a href="portf-item"> <img src="./images/portfolio6.jpg" 
+            <li class="portf-name"> <a  class="portf-item" href=""> <img src="./images/portfolio6.jpg" 
                 alt="вдохновение не имеет границ"
                 width="370"
                 height="294"/>
@@ -88,7 +88,7 @@
               <h2 class="portf-title">Inspiration has no Borders</h2>  
               <p class="portf-text" >Веб-сайт</p></div> </a>
             </li>
-            <li class="portf-name"> <a href="portf-item"> <img src="./images/portfolio7.jpg" 
+            <li class="portf-name"> <a class="portf-item" href=""> <img src="./images/portfolio7.jpg" 
                 alt="ограниченные издания"
                 width="370"
                 height="294"/>
@@ -96,7 +96,7 @@
               <h2 class="portf-title">Издание Limited Edition</h2>  
               <p class="portf-text" >Дизайн</p></div> </a>
             </li>
-            <li class="portf-name"> <a href="portf-item"><img src="./images/portfolio8.jpg" 
+            <li class="portf-name"> <a class="portf-item"  href=""><img src="./images/portfolio8.jpg" 
                 alt="проект лаб"
                 width="370"
                 height="294"/>
@@ -104,7 +104,7 @@
               <h2 class="portf-title">Проект LAB</h2>  
               <p class="portf-text" >Маркетинг</p></div> </a>
             </li>
-            <li class="portf-name"> <a href="portf-item"> <img src="./images/portfolio9.jpg" 
+            <li class="portf-name"> <a class="portf-item" href=""> <img src="./images/portfolio9.jpg" 
                 alt="бизнес"
                 width="370"
                 height="294"/>
@@ -121,13 +121,13 @@
         <a class="logo-footer" href="index.html"> <span class="logo-name">Web</span>Studio </a> </div>
         <address>        
         <ul class="footer-info">
-            <li>
+            <li class="footer-adress">
              <a class="adress" href="">г. Киев, пр-т Леси Украинки, 26</a>              
             </li>
-            <li>
+            <li class="footer-adress">
                 <a class="footer-link" href="mailto:info@example.com">info@example.com</a>
             </li>
-            <li>
+            <li class="footer-adress">
                 <a class="footer-link" href="tel:+380991111111">+38 099 111 11 11</a>
             </li>
         </ul>
